[project]
name = "comfyui-llama"
description = "This is a nodepack which simply exposes llama-cpp-python on ComfyUI"
version = "1.0.0"
license = "MIT"
dependencies = ["llama-cpp-python"]

[project.urls]
Repository = "https://github.com/daniel-lewis-ab/ComfyUI-Llama"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Llama"
Icon = ""
